Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

 o Fixed dead messages "__sys__deadMessage" to contain the complete key and qos
   of its embedded message.
   The clientProperty keys are "__key", "__qos", "__oid" and "__rcvTimestamp".
   The latter two are added for convenience reasons only.

 o Extended ClientProperties to transfer blob data, introduced base64
   encoding if illegal characters are transferred
   see http://www.xmlblaster.org/xmlBlaster/doc/requirements/engine.qos.clientProperty.html

 o Added protection for publisher thread to never do cleanup of callbacks
   (avoid dead locks)

 o manifest.xmlBlaster: Added missing jhotdraw.jar, demo.jar and testsuite.jar

 o C-Client: changed include in pthread.h for simpler compilation

 o Fixed update problem when content is empty

 o Fixed dead letter handling on callback queue overflow

 o C client library: Fixed bug in trim() which lead on stress tests
   to corrupted messages.
   Thanks to FdGiglio@naples.sema.slb.com

 o JDK 1.2 runtime support: The current jacorb.jar does NOT run with JDK 1.2
   To run xmlBlaster with JDK 1.2 you have these options:
   - Download an older jacorb.jar and throw it into xmlBlaster/lib
   or
   - Switch off the corba plugin in xmlBlasterPlugins.xml, now the
     server runs fine. For java clients use the SOCKET
     protocol with the option '-protocol SOCKET' (RMI and XML-RPC are fine too).
   
   NOTE: You can compile xmlBlaster with JDK 1.3 (or 1.4) und still
   run it with JDK 1.2. If you need to compile xmlBlaster with JDK 1.2
   please exclude the JMX stuff in build.xml (uncomment those):
      <patternset id="jdk12.notcompatible.sources">
         <exclude name="**/jmx/**"/>
         <exclude name="**/jmxgui/**"/>
         <exclude name="**/memoryleak/**"/>
      </patternset>
   build.sh delete; build.sh xmlBlaster
   (Parts of the testsuite won't compile with JDK 1.2)

 o Fixed hsqldb.jar to compile/run with JDK 1.3 and 1.2 again.
