@@ -1,4 +1,4 @@
-build.sh cpp-precompile
+build cpp-precompile
 
 
 
