@@ -13,13 +13,13 @@
 
    <example lang="Java" type="HTML">
     <p>
-    Lets build a distribution (on Windows replace build.sh to build.bat):
+    Lets build a distribution (on UNIX with the shell script 'build', on Windows with 'build.bat'):
     </p>
     <table border="1"><tr><td><pre>
 
 cd xmlBlaster
 
-build.sh  dist
+build  dist
     </pre></td></tr></table>
 
     <p> The result is:</p>
@@ -75,7 +75,7 @@ xmlBlaster/INSTALL
       </p>
       <table border="1"><tr><td><pre> <!-- pre class="BORDER" width="80" (Netscape does not like it) -->
 
-build.sh -DADD_EMAIL=false -DADD_XMLRPC=false -DADD_PROP=my.properties  dist
+build -DADD_EMAIL=false -DADD_XMLRPC=false -DADD_PROP=my.properties  dist
       </pre></td></tr></table>
 
       <p>
@@ -211,7 +211,7 @@ sleep 5
    
    <date>2002 06 04</date>
    
-   <revision>$Revision: 1.13 $</revision>
+   <revision>$Revision: 1.14 $</revision>
 
    <testcase status="CLOSED">
       <name>-</name>
