@@ -238,9 +238,9 @@ i had tomcat 3.2.4, 4.1.29 and 5.0.14 to test it, others should work as well):
 <pre>
   cd xmlBlaster
 
-  build.sh all      (assure xmlBlaster is compiled)
+  build all      (assure xmlBlaster is compiled)
 
-  build.sh  -DTOMCAT_HOME=/opt/jakarta_tomcat   deploy_war
+  build  -DTOMCAT_HOME=/opt/jakarta_tomcat   deploy_war
 </pre>
 <p>
 Set TOMCAT_HOME to point to your installation and the xmlBlaster.war
@@ -316,7 +316,7 @@ ActionType=login&amp;xmlBlaster.loginName=joe&amp;xmlBlaster.passwd=secret
    <hacker>xmlBlaster@marcelruff.info</hacker>
    <effort>12</effort>
    <date>2000 05 06</date>
-   <revision>$Revision: 1.16 $</revision>
+   <revision>$Revision: 1.17 $</revision>
    <testcase status="INWORK">
       <name>-</name>
       <comment>It is not simple to provide a fully automated testsuite for this case</comment>
