@@ -67,7 +67,7 @@ CORBACPP_VER  = 2.3.7
       </p>
       <pre>
 cd xmlBlaster
-build.sh -verbose cpp
+build -verbose cpp
 
 This creates:
    xmlBlaster/lib/libmlBlasterClient.so
@@ -120,7 +120,7 @@ and some test clients in
 
    <date>2003 03 05</date>
 
-   <revision>$Revision: 1.4 $</revision>
+   <revision>$Revision: 1.5 $</revision>
 
    <testcase status="OPEN">
       <name>-</name>
