@@ -57,7 +57,7 @@ CXX           =
       </p>
       <pre>
 cd xmlBlaster
-build.sh -verbose cpp
+build -verbose cpp
 
 This creates:
    xmlBlaster/lib/libmlBlasterClient.so
@@ -104,7 +104,7 @@ HelloWorld2
 
    <date>2003 03 03</date>
 
-   <revision>$Revision: 1.3 $</revision>
+   <revision>$Revision: 1.4 $</revision>
 
    <testcase status="OPEN">
       <name>-</name>
