@@ -112,7 +112,7 @@ CORBACPP_VER  =
       </p>
       <pre>
 cd xmlBlaster
-build.bat -verbose cpp
+build -verbose cpp
 
 This creates:
    xmlBlaster\src\c++\tao_build\xmlBlasterClient.dll
@@ -170,7 +170,7 @@ distribution
    
    <date>2002 08 27</date>
    
-   <revision>$Revision: 1.12 $</revision>
+   <revision>$Revision: 1.13 $</revision>
 
    <testcase status="OPEN">
       <name>-</name>
