@@ -388,7 +388,7 @@ int main(int args, char ** argv)
        <td><a href="http://xml.apache.org" target="others">XERCES C++ 2.2</a></td>
        <td>2003-07-03</td>
        <td><a href="mailto:xmlBlaster@marcelruff.info">Marcel</a></td>
-       <td>Edit <a href="http://www.xmlBlaster.org/xmlBlaster/build.properties">build.properties</a> and use <a href="http://www.xmlBlaster.org/xmlBlaster/build.xml">xmlBlaster/build.xml</a> to compile<br /><i>build.sh -Duse-icc=true cpp</i></td>
+       <td>Edit <a href="http://www.xmlBlaster.org/xmlBlaster/build.properties">build.properties</a> and use <a href="http://www.xmlBlaster.org/xmlBlaster/build.xml">xmlBlaster/build.xml</a> to compile<br /><i>build -Duse-icc=true cpp</i></td>
        </tr>
 
        <tr>
@@ -410,10 +410,9 @@ int main(int args, char ** argv)
        For compilation options please use
       </p>
 <pre>
-   build.sh cpp     compiles client lib and testsuite on UNIX
-   build.bat cpp    compiles client lib and testsuite on Windows
+   build cpp     compiles client lib and testsuite on UNIX or Windows
 
-   build.sh usage   show other compile options
+   build usage   show other compile options
 </pre>
 <p>
 Compilation with VC 6 will fail (broken namespace support leads to internal compiler error).
@@ -467,6 +466,6 @@ cvs log Global.cpp
 <!--   <see type="REQ">cluster</see> -->
    <author><a href="mailto:laghi@swissinfo.org">Michele Laghi</a></author>
    <date>2003 01 15</date>
-   <revision>$Revision: 1.23 $</revision>
+   <revision>$Revision: 1.24 $</revision>
 </requirement>
 
