@@ -227,7 +227,7 @@ i had tomcat 3.2.4, 4.1.29 and 5.0.14 to test it, others should work as well):
 <pre>
   cd xmlBlaster
 
-  build.sh  -DTOMCAT_HOME=/opt/jakarta_tomcat   deploy_war
+  build  -DTOMCAT_HOME=/opt/jakarta_tomcat   deploy_war
 </pre>
 <p>
 Set TOMCAT_HOME to point to your installation and the <code>xmlBlaster.war</code>
@@ -299,7 +299,7 @@ http://localhost:8080/xmlBlaster/SystemInfoApplet.html
 <!--   <see type="REQ">cluster</see> -->
    <author><a href="mailto:mr@marcelruff.info">Marcel Ruff</a></author>
    <date>2003 11 16</date>
-   <revision>$Revision: 1.3 $</revision>
+   <revision>$Revision: 1.4 $</revision>
 
    <testcase status="OPEN">
       <name>-</name>
